stuctuur van de index.html en css ruw gecodeerd

--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -1,3 +1,7 @@
 //================================
 // @@ ++ Variables
 //================================
+$pink: #f6656a;
+$bordeau: #6e0908;
+$grey: #adadad;
+$darkgrey: #888888;
