--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,136 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>'t Kalfshuys</title>
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/style.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+<!-- navbar -->
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">'t KALFSHUYS</a>
+        </div>
 
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#">HOME</a></li>
+                <li><a href="#">BESTELLEN</a></li>
+                <li><a href="#">CONTACT</a></li>
+            </ul>
+        </div>
+        <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container-fluid -->
+</nav>
+
+<section class="section--homepage">
+    <div class="container homepage--container">
+        <div class="homepage__logo--slogan">
+            <div class="row">
+                <div class="col-md-3">
+                    <img src="../logo.png">
+                </div>
+                <div class="col-md-9">
+                    <h1>KALFSVLEES VOOR ECHTE FIJNPROEVERS</h1>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="section--quality section--50">
+    <div class="container container--quality">
+        <div class="row">
+            <div class="col-md-3">
+                <img src="../logo.png">
+            </div>
+            <div class="col-md-9">
+                <div class="paragraph">
+                    <p>’t Kalfshuys staat voor kwaliteit. Onze kalveren worden stuk voor stuk, met de grootste zorg en
+                        op
+                        natuurlijke wijze grootgebracht en gevoederd.
+                        <br>Want bij ’t Kalfshuys willen we een puur product afleveren aan u, onze klant.
+                        <br>We bieden u dan ook graag ons assortiment aan. <br>Zo kan u zelf onze kwaliteit proeven.
+                    </p>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+</section>
+<section class="section--aboutus section--50">
+    <div class="container container--aboutus">
+        <h2>Een familiebedrijf met passie en ervaring!</h2>
+
+        <h3>Over ons en onze visie</h3>
+
+        <div class="paragraph">
+            <p>Wij zijn een familiebedrijf dat op een eerlijke manier kalfs en rundvlees produceert en rechtstreeks
+                verkoopt aan de consument. Wij garanderen u dat ons vers vlees op een correcte manier geproduceerd wordt
+                en voor een gunstige prijs aan de consument verkocht kan worden. Dit doen we zonder te besparen op
+                voeders en huisvestingskosten zodat een kwalitatief hoogstaand product afgeleverd kan worden.</p>
+        </div>
+    </div>
+</section>
+<section class="section--corebusiness">
+    <div class="container container--corebusiness">
+        <div class="col-md-4">
+            <div class="corebusiness__img">
+                <img src="../images/kalf.jpg">
+            </div>
+            <div class="corebusiness__item">
+                <p>Het kalfsvlees dat we u verkopen is onze specialiteit. Belgische witblauw kalveren worden gekocht
+                    bij plaatselijke boeren en worden gevoederd met producten afkomstig van ons eigen bedrijf.
+                    De dieren worden op stro gehouden en met de grootste zorgen op een diervriendelijke manier
+                    gekweekt. Het vlees dat deze kalveren afleveren is rosé van kleur en iets sterker van smaak.</p>
+                <h4 class="corebusiness__title">KALFSVLEES</h4>
+
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="corebusiness__img">
+                <img src="../images/rund.jpg">
+            </div>
+            <div class="corebusiness__item">
+                <p>Onze limousine runderen lopen in de zomer op onze weide en in de winter op stal.
+                    Ze worden gevoederd met ruwvoeders afkomstig van ons eigen bedrijf zodat de dieren op een
+                    rustige en ongeforceerde wijze kunnen groeien.
+                    Dit garandeert mals vlees, licht doorregend met een beetje vet om de typische smaak van het
+                    ras te garanderen.
+                </p>
+                <h4 class="corebusiness__title">RUNDSVLEES</h4>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="corebusiness__img">
+                <img src="../images/versnijden.jpg">
+            </div>
+            <div class="corebusiness__item">
+                <p>Het vlees wordt versneden en verpakt bij een plaatselijke slager om de klant de versheid van ons
+                    product te kunnen garanderen.
+                    Uiteraard zijn wij ook bij dit proces zeer nauw betrokken, zodat de garanties die we bieden
+                    verzekerd blijven.
+                </p>
+                <h4 class="corebusiness__title">VERSNIJDEN & VERPAKKEN</h4>
+            </div>
+        </div>
+    </div>
+</section>
+<footer>
+    <div class="container">
+        <p>'t Kalfshuys © 2016</p>
+    </div>
+</footer>
 </body>
 </html>
