--- a/sass/state/_mediaquery.scss
+++ b/sass/state/_mediaquery.scss
@@ -3,10 +3,15 @@
 //================================
 @media only screen and (max-width: 1366px) {
   /* css code voor tablets in landscape mode*/
+
 }
 
 @media only screen and (max-width: 960px) {
   /* css code voor tablets in portrait mode */
+  h1 {
+    font-size: 2.9em;
+  }
+
 }
 
 @media only screen and (max-width: 767px) {
