--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,7 +1,7 @@
 //================================
 // @@ ++ Footer
 //================================
-footer {
+.footer {
   background-color: #000000;
   color: #ffffff;
   padding: 15px 0;
