--- a/sass/style.scss
+++ b/sass/style.scss
@@ -32,7 +32,7 @@
 //========================
 // @@ ++ Components
 //========================
-
+@import "components/buttons";
 
 //=======================
 // @@ ++ State
