--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
     <title>'t Kalfshuys</title>
     <link href="../css/bootstrap.min.css" rel="stylesheet">
     <link href="../css/style.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -46,7 +47,16 @@
                     <img src="../logo.png">
                 </div>
                 <div class="col-md-9">
-                    <h1>KALFSVLEES VOOR ECHTE FIJNPROEVERS</h1>
+                    <div class="col-md-12">
+                        <h1>KALFSVLEES VOOR ECHTE FIJNPROEVERS</h1>
+                    </div>
+                    <div class="col-md-12 btn--cta">
+                        <!-- de link naar bestel form zou gemakkelijk aanpasbaar moeten
+                        zijn voor de editors 2 forms via een checkbox bv -->
+                        <a href="#">
+                            <button class="btncta__btn">NAAR BESTELLEN</button>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
