--- a/sass/base/_globals.scss
+++ b/sass/base/_globals.scss
@@ -16,7 +16,7 @@ h1, h2, h3, h4, h5 {
 }
 
 h1 {
-  font-size: 3.5em;
+  font-size: 3.3em;
 }
 
 h2 {
@@ -29,4 +29,10 @@ h3 {
 
 h4 {
   font-size: 2em;
+}
+
+.paragraph {
+  font-size: 22px;
+  line-height: 32px;
+  text-align: center;
 }
