--- a/sass/layout/_sections.scss
+++ b/sass/layout/_sections.scss
@@ -51,15 +51,19 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  .corebusiness__item {
-    background-color: $darkgrey;
-    padding: 35px 15px;
-    color: #ffffff;
-    min-height: 37vh;
-  }
-  .corebusiness__title {
-  }
-  .corebusiness__img {
-    overflow: hidden;
+  .corebusiness__region {
+
+    .corebusiness__item {
+      background-color: $darkgrey;
+      padding: 35px 15px;
+      color: #ffffff;
+      min-height: 37vh;
+    }
+    .corebusiness__title {
+
+    }
+    .corebusiness__img {
+      overflow: hidden;
+    }
   }
 }
