--- a/templates/index.html
+++ b/templates/index.html
@@ -6,11 +6,12 @@
     <link href="../css/bootstrap.min.css" rel="stylesheet">
     <link href="../css/style.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+    <script src="../js/facebook.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-
+<div id="fb-root"></div>
 <!-- navbar -->
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
@@ -154,6 +155,25 @@
 </section>
 <footer class="footer">
     <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                
+            </div>
+            <div class="col-md-4">
+                <ul>
+                    <a href="#"><li>HOME</li></a>
+                    <a href="#"><li>BESTELLEN</li></a>
+                    <a href="#"><li>CONTACT</li></a>
+                </ul>
+            </div>
+            <div class="col-md-4">
+                <div class="fb-page" data-href="https://www.facebook.com/tKalfshuys/" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
+                    <blockquote cite="https://www.facebook.com/tKalfshuys/" class="fb-xfbml-parse-ignore">
+                        <a href="https://www.facebook.com/tKalfshuys/">T Kalfshuys</a>
+                    </blockquote>
+                </div>
+            </div>
+        </div>
         <p>'t Kalfshuys © 2016</p>
     </div>
 </footer>
