--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,8 +4,8 @@
 //=========================
 // @@ ++ Vendor
 //=========================
-@import "vendor/bootstrap.min";
-
+//@import "vendor/bootstrap.min";
+@import "vendor/font-awesome.min";
 
 //=========================
 // @@ ++ Base
