--- a/templates/index.html
+++ b/templates/index.html
@@ -90,13 +90,18 @@
             <div class="col-md-12">
                 <header>
                     <h2>Een familiebedrijf met passie en ervaring!</h2>
+
                     <h3>Over ons en onze visie</h3>
                 </header>
                 <div class="paragraph">
-                    <p>Wij zijn een familiebedrijf dat op een eerlijke manier kalfs en rundvlees produceert en rechtstreeks
-                        verkoopt aan de consument. Wij garanderen u dat ons vers vlees op een correcte manier geproduceerd wordt
-                        en voor een gunstige prijs aan de consument verkocht kan worden. Dit doen we zonder te besparen op
-                        voeders en huisvestingskosten zodat een kwalitatief hoogstaand product afgeleverd kan worden.</p>
+                    <p>Wij zijn een familiebedrijf dat op een eerlijke manier kalfs en rundvlees produceert en
+                        rechtstreeks
+                        verkoopt aan de consument. Wij garanderen u dat ons vers vlees op een correcte manier
+                        geproduceerd wordt
+                        en voor een gunstige prijs aan de consument verkocht kan worden. Dit doen we zonder te besparen
+                        op
+                        voeders en huisvestingskosten zodat een kwalitatief hoogstaand product afgeleverd kan
+                        worden.</p>
                 </div>
             </div>
         </div>
@@ -154,27 +159,53 @@
     </div>
 </section>
 <footer class="footer">
-    <div class="container">
+    <div class="container footer--main">
         <div class="row">
-            <div class="col-md-4">
-                
+            <div class="col-md-4 contact--region">
+                <!-- contact gegevens -->
+                <h5>Ons contacteren</h5>
+
+                <div class="mobile--phone">
+                    <div class="mobilephone__each">
+                        <i class="fa fa-mobile" aria-hidden="true"></i> +32479792529
+                    </div>
+                    <div class="mobilephone__each">
+                        <i class="fa fa-mobile" aria-hidden="true"></i> +32489805656
+                    </div>
+                </div>
+                <div class="email">
+                    <i class="fa fa-envelope-o" aria-hidden="true"></i> <a href="mailto:steven.van.nijlen@telenet.be">Mailen kan ook</a>
+                </div>
             </div>
             <div class="col-md-4">
+                <!-- extra menu -->
                 <ul>
-                    <a href="#"><li>HOME</li></a>
-                    <a href="#"><li>BESTELLEN</li></a>
-                    <a href="#"><li>CONTACT</li></a>
+                    <a href="#">
+                        <li>HOME</li>
+                    </a>
+                    <a href="#">
+                        <li>BESTELLEN</li>
+                    </a>
+                    <a href="#">
+                        <li>CONTACT</li>
+                    </a>
                 </ul>
             </div>
             <div class="col-md-4">
-                <div class="fb-page" data-href="https://www.facebook.com/tKalfshuys/" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
+                <!-- social -->
+                <div class="fb-page" data-href="https://www.facebook.com/tKalfshuys/" data-small-header="false"
+                     data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
                     <blockquote cite="https://www.facebook.com/tKalfshuys/" class="fb-xfbml-parse-ignore">
                         <a href="https://www.facebook.com/tKalfshuys/">T Kalfshuys</a>
                     </blockquote>
                 </div>
             </div>
         </div>
-        <p>'t Kalfshuys © 2016</p>
+        <div class="copyright">
+            <!-- copyright -->
+            <!-- TODO year omzetten naar php date -->
+            <p>'t Kalfshuys © 2016</p>
+        </div>
     </div>
 </footer>
 </body>
