--- a/sass/base/_globals.scss
+++ b/sass/base/_globals.scss
@@ -11,28 +11,44 @@ body {
   font-size: 16px;
 }
 
+p {
+  font-size: 16px;
+  line-height: 25px;
+}
+
 h1, h2, h3, h4, h5 {
   font-family: 'Fjalla One', sans-serif;
 }
 
 h1 {
   font-size: 3.3em;
+  line-height: 3.2em;
 }
 
 h2 {
   font-size: 3em;
+  //line-height: 2.5em;
 }
 
 h3 {
   font-size: 2.5em;
+  line-height: 2em;
 }
 
 h4 {
   font-size: 2em;
+  line-height: 1.5em;
+}
+
+h5 {
+  font-size: 1.5em;
+  padding: 10px 0;
 }
 
 .paragraph {
-  font-size: 22px;
-  line-height: 32px;
-  text-align: center;
+  p {
+    font-size: 22px;
+    line-height: 32px;
+    text-align: center;
+  }
 }
